force-app/main/default/objects/Order__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>CustomerOrder</relationshipName>
</CustomField>