force-app/main/default/objects/Order__c/fields/Order_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Order_DateTime__c</fullName>
    <label>Order Date/Time</label>
    <type>DateTime</type>
</CustomField>