force-app/main/default/objects/Order__c/fields/Reservation__c.field-meta.xml
<CustomField>
    <fullName>Reservation__c</fullName>
    <label>Reservation</label>
    <type>Lookup</type>
    <referenceTo>Reservation__c</referenceTo>
    <relationshipName>Reservation</relationshipName>
</CustomField>